--- a/index.html
+++ b/index.html
@@ -64,68 +64,199 @@
 
     <!-- header -->
     <header>
-      <section class="d-flex container p-2">
-        <!-- <div class="row"> -->
-        <div class="text-side col-md-7 p-4">
-          <div class="text-lable">Pro.Beyond.</div>
-          <div class="d-flex">
-            <p class="text-heading">IPhone</p>
-            <p class="headingText">14 Pro</p>
-          </div>
-          <div class="text-sub">
-            Created to change everything for the better. For everyone
-          </div>
-          <div class="button mt-3">
-            <button type="button" class="btn text-white">Shop Now</button>
-          </div>
-        </div>
+      <section class="container">
+        <div
+          id="carouselExampleRide"
+          class="carousel slide"
+          data-bs-ride="true"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item">
+              <div class="d-flex">
+                <div class="text-side col-md-7 p-4">
+                  <div class="text-lable">Pro.Beyond.</div>
+                  <div class="d-flex">
+                    <p class="text-heading">IPhone</p>
+                    <p class="headingText">14 Pro</p>
+                  </div>
+                  <div class="text-sub">
+                    Created to change everything for the better. For everyone
+                  </div>
+                  <div class="button mt-3">
+                    <button type="button" class="btn text-white">
+                      Shop Now
+                    </button>
+                  </div>
+                </div>
 
-        <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
 
-        <div class="row col-md-3">
-          <img
-            class="image-positon"
-            src="./resources/Iphone Image.png"
-            alt=""
-          />
+                <div class="row col-md-3">
+                  <img
+                    class="image-positon"
+                    src="./resources/Iphone Image.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="d-flex">
+                <div class="text-side col-md-7 p-4">
+                  <div class="text-lable">Pro.Beyond.</div>
+                  <div class="d-flex">
+                    <p class="text-heading">IPhone</p>
+                    <p class="headingText">14 Pro</p>
+                  </div>
+                  <div class="text-sub">
+                    Created to change everything for the better. For everyone
+                  </div>
+                  <div class="button mt-3">
+                    <button type="button" class="btn text-white">
+                      Shop Now
+                    </button>
+                  </div>
+                </div>
+
+                <div class="col-md-2"></div>
+
+                <div class="row col-md-3">
+                  <img
+                    class="image-positon"
+                    src="./resources/Iphone Image.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex">
+                <div class="text-side col-md-7 p-4">
+                  <div class="text-lable">Pro.Beyond.</div>
+                  <div class="d-flex">
+                    <p class="text-heading">IPhone</p>
+                    <p class="headingText">14 Pro</p>
+                  </div>
+                  <div class="text-sub">
+                    Created to change everything for the better. For everyone
+                  </div>
+                  <div class="button mt-3">
+                    <button type="button" class="btn text-white">
+                      Shop Now
+                    </button>
+                  </div>
+                </div>
+
+                <div class="col-md-2"></div>
+
+                <div class="row col-md-3">
+                  <img
+                    class="image-positon"
+                    src="./resources/Iphone Image.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleRide"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleRide"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <!-- </div> -->
       </section>
     </header>
 
     <!-- header er por er section -->
-    <div class="">
-      <div class="ipad col-md-6 d-flex">
-        <img src="./resources/ipad.png" alt="" width="300" height="200" />
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <p class="headingText">iPad 9</p>
-          <p class="subtext">
-            Powerful. Easy to use. Versatile. iPad is designed for all the
-            things you love to do. Work, play, create, learn, stay connected,
-            and more. All at an incredible value.
-          </p>
+    <section>
+      <div style="border: 1px solid blue" class="d-flex" width="100%">
+        <div style="border: 1px solid green" class="mt-2 col-md-6">
+          <div class="col-md-4 d-flex">
+            <img src="./resources/ipad.png" alt="" width="300" height="200" />
+            <div class="col-md-1"></div>
+            <div class="col-md-6">
+              <p class="bold">iPad 9</p>
+              <p class="subtext">
+                Powerful. Easy to use. Versatile. iPad is designed for all the
+                things you love to do. Work, play, create, learn, stay
+                connected, and more. All at an incredible value.
+              </p>
+            </div>
+          </div>
+          <div class="sub-back p-2 mt-4 d-flex">
+            <img
+              src="./resources/Iphone 14 pro 1.png"
+              alt=""
+              width="300"
+              height="200"
+            />
+            <div class="col-md-1"></div>
+            <div>
+              <p>Apple AirPods</p>
+              <b class="bold">Max</b>
+              <p
+                style="
+                  color: #fff;
+                  font-family: Montserrat;
+                  font-size: 14px;
+                  font-style: normal;
+                  font-weight: 500;
+                  line-height: 24px; /* 171.429% */
+                "
+                class="subtext"
+              >
+                Introducing AirPods Max — a perfect balance of exhilarating
+                high-fidelity audio and the effortless magic of AirPods. The
+                ultimate personal listening experience is here
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div style="border: 1px solid red" class="mac-back col-md-6">
+          <div class="d-flex">
+            <div class="text-side col-md-5 p-4">
+              <div class="d-flex">
+                <p class="text-heading">Macbook</p>
+                <p class="headingText">Air</p>
+              </div>
+              <div class="text-sub">
+                Created to change everything for the better. For everyone
+              </div>
+              <div class="button mt-3">
+                <button type="button" class="btn text-white">Shop Now</button>
+              </div>
+            </div>
+
+            <div class="col-md-2"></div>
+
+            <div class="row col-md-4 align-items-md-center">
+              <img
+                class="mac-positon"
+                src="./resources/Group 6.png"
+                alt=""
+                width="500"
+                height="300"
+              />
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="mt-3 col-md-6 d-flex">
-      <img
-        src="./resources/Iphone 14 pro 1.png"
-        alt=""
-        width="300"
-        height="200"
-      />
-      <div class="col-md-1"></div>
-      <div class="col-md-4">
-        <p class="headingText">iPad 9</p>
-        <p class="subtext">
-          Powerful. Easy to use. Versatile. iPad is designed for all the things
-          you love to do. Work, play, create, learn, stay connected, and more.
-          All at an incredible value.
-        </p>
-      </div>
-    </div>
+    </section>
     <!-- jsBootstrap link -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
