--- a/index.html
+++ b/index.html
@@ -460,10 +460,7 @@
     </section>
 
     <!-- sale section -->
-    <section
-      style="border: 1px solid rgb(255, 0, 76)"
-      class="p-2 saleBackground d-flex"
-    >
+    <section class="p-2 saleBackground d-flex">
       <div class="col-md-3 mt-4">
         <img
           class="imgset mt-4"
@@ -473,10 +470,7 @@
           width="60%"
         />
       </div>
-      <div
-        style="border: 1px solid blue"
-        class="sales align-items-center col-md-5"
-      >
+      <div class="sales align-items-center col-md-5">
         <div class="d-flex">
           <h2 class="sales-title">11.11</h2>
           <p class="sales-title1">Sales</p>
@@ -499,7 +493,7 @@
       </div>
     </section>
     <!-- footer -->
-    <footer style="border: 1px solid blue" class="footer">
+    <footer class="footer">
       <div class="d-flex">
         <div class="col-md-2">
           <img src="./resources/Group 2.png" alt="" srcset="" width="80%" />
