--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <!-- header er por er section -->
     <section>
-      <div style="border: 1px solid blue" class="d-flex" width="100%">
+      <div  class="d-flex" width="100%">
         <div class="mt-2 col-md-6">
           <div class="col-md-4 d-flex">
             <img src="./resources/ipad.png" alt="" width="300" height="200" />
