--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <!-- header er por er section -->
     <section>
-      <div  class="d-flex" width="100%">
+      <div class="d-flex" width="100%">
         <div class="mt-2 col-md-6">
           <div class="col-md-4 d-flex">
             <img src="./resources/ipad.png" alt="" width="300" height="200" />
@@ -369,7 +369,7 @@
         </div>
       </div>
       <!-- card section -->
-      <div style="border: 1px solid red" class="cardHolder container d-flex">
+      <div class="cardHolder container d-flex">
         <div class="Card" style="width: 18rem">
           <img
             src="./resources/Favorite_duotone.png"
@@ -433,11 +433,7 @@
             <a href="#" class="bottonProperty btn-dark">Buy Now</a>
           </div>
         </div>
-        <div
-          style="border: 1px solid rgb(255, 0, 76)"
-          class="Card"
-          style="width: 18rem"
-        >
+        <div class="Card" style="width: 18rem">
           <img
             src="./resources/Favorite_duotone.png"
             class="ml-3 justify-content-end"
